"""empty message

Revision ID: 0b15502f56e3
Revises: 
Create Date: 2024-06-05 17:50:06.836882

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '0b15502f56e3'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('accounts',
    sa.Column('id_account', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('username', sa.String(length=45), nullable=False),
    sa.Column('password', sa.String(), nullable=False),
    sa.Column('email', sa.String(length=100), nullable=False),
    sa.Column('is_admin', sa.Boolean(), nullable=False),
    sa.Column('surname', sa.String(length=45), nullable=False),
    sa.Column('phone', sa.String(length=45), nullable=False),
    sa.Column('address', sa.String(length=45), nullable=False),
    sa.Column('dni', sa.Integer(), nullable=False),
    sa.Column('birthdate', sa.DateTime(), nullable=False),
    sa.PrimaryKeyConstraint('id_account')
    )
    op.create_table('coins',
    sa.Column('id_coin', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('coin_name', sa.String(length=50), nullable=True),
    sa.Column('coin_abbreviation', sa.String(length=5), nullable=True),
    sa.PrimaryKeyConstraint('id_coin')
    )
    op.create_table('swaps',
    sa.Column('id_swap', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('operation_date', sa.DateTime(), nullable=False),
    sa.Column('amount_in', sa.Integer(), nullable=False),
    sa.Column('amount_out', sa.Integer(), nullable=False),
    sa.Column('id_wallet_in', sa.Integer(), nullable=False),
    sa.Column('id_wallet_out', sa.Integer(), nullable=False),
    sa.PrimaryKeyConstraint('id_swap')
    )
    op.create_table('wallets',
    sa.Column('id_wallet', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('balance', sa.Integer(), nullable=False),
    sa.Column('id_account', sa.Integer(), nullable=False),
    sa.Column('id_coin', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['id_account'], ['accounts.id_account'], ),
    sa.ForeignKeyConstraint(['id_coin'], ['coins.id_coin'], ),
    sa.PrimaryKeyConstraint('id_wallet')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('wallets')
    op.drop_table('swaps')
    op.drop_table('coins')
    op.drop_table('accounts')
    # ### end Alembic commands ###
