@startuml
class Account {
    - id_account: int
    - is_admin: bool
    - dni: int
    - username: str
    - name: str
    - surname: str
    - birthdate: dates
    - phone: str
    - address: str
    - email: str
    - password: str
    --
    + get_data_account ()   
    + set_data_account ()
    + make_balance ()
    + upload_money ()
    + get_other_account_info (DNI)
}
class Model {
 clase de SQLAlchemy
}

note right of Account::get_data_account
This method returns the data of a user
end note



class Swap{
    -id_swap: int
    -operation_date: date
    -swap: str
    -amount_in: float
    -amount_out: float
    -id_wallet_in: int
    -id_wallet_out: int
    --
    +equate_coins ()
    +get_swap () 
}

Class Coin {
    -id_coin: int
    -coin_name: str
    -abbreviation: str
    --
    +api_function () 
}

note right  of Coin::api_function
Returns the Coin
end note


Class Wallet{
    -id_wallet: int
    -balance: float
    -id_owner_account: int
    -id_wallet_coin: int
}





Wallet "1" *-- "1" Swap

Account "1"*-- "1" Wallet

Wallet *-- Coin

Model <|-- Swap
Model <|-- Wallet
Model <|-- Account 
Model <|-- Coin